--- a/Market.ipynb
+++ b/Market.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXZj2Zw1KIV/h337ouo3b5",
+      "authorship_tag": "ABX9TyOMSkpvCqrdCFzRWA1k6Gq2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,352 +13,6 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "30b25d8ebf33492a8066ccdfb9fa218f": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HBoxModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HBoxModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HBoxView",
-            "box_style": "",
-            "children": [
-              "IPY_MODEL_780c69afa5fa420faf62356d8d7296e7",
-              "IPY_MODEL_952c8c2539e948f2bc6597fe881d04c3",
-              "IPY_MODEL_26ee84a30962475f9305c2b2f9f32bc7"
-            ],
-            "layout": "IPY_MODEL_426cf024aafb4117b6aef2a05cd70119"
-          }
-        },
-        "780c69afa5fa420faf62356d8d7296e7": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HTMLModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HTMLModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HTMLView",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_b9762a6938024998a91607b70ec8a55b",
-            "placeholder": "​",
-            "style": "IPY_MODEL_7dc20e0278ea48c08c4f9d1a86a8debd",
-            "value": "Summarize dataset:  53%"
-          }
-        },
-        "952c8c2539e948f2bc6597fe881d04c3": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "FloatProgressModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "FloatProgressModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "ProgressView",
-            "bar_style": "",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_7da945b6da6c4f168a6c6064612690cc",
-            "max": 5,
-            "min": 0,
-            "orientation": "horizontal",
-            "style": "IPY_MODEL_019a00156e0a499a985d3c98754b9f4f",
-            "value": 5
-          }
-        },
-        "26ee84a30962475f9305c2b2f9f32bc7": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HTMLModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HTMLModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HTMLView",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_529a94b10eca49d6a77af43d337886f3",
-            "placeholder": "​",
-            "style": "IPY_MODEL_a0148e0ba53545248be31a790e735834",
-            "value": " 8/15 [01:56&lt;01:12, 10.34s/it, Describe variable: review/text]"
-          }
-        },
-        "426cf024aafb4117b6aef2a05cd70119": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "b9762a6938024998a91607b70ec8a55b": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "7dc20e0278ea48c08c4f9d1a86a8debd": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "DescriptionStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "DescriptionStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "description_width": ""
-          }
-        },
-        "7da945b6da6c4f168a6c6064612690cc": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "019a00156e0a499a985d3c98754b9f4f": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "ProgressStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "ProgressStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "bar_color": null,
-            "description_width": ""
-          }
-        },
-        "529a94b10eca49d6a77af43d337886f3": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "a0148e0ba53545248be31a790e735834": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "DescriptionStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "DescriptionStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "description_width": ""
-          }
-        }
-      }
     }
   },
   "cells": [
@@ -823,106 +477,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "cdvlYO17Acw5"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
-        "import ydata_profiling as ydp\n",
+        "'''import ydata_profiling as ydp\n",
         "import pandas as pd\n",
         "from ydata_profiling import ProfileReport\n",
         "profile = ProfileReport(df.to_pandas(), title=\"Profiling Report\")\n",
-        "profile.to_notebook_iframe()"
+        "profile.to_notebook_iframe().  '''"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 437,
-          "referenced_widgets": [
-            "30b25d8ebf33492a8066ccdfb9fa218f",
-            "780c69afa5fa420faf62356d8d7296e7",
-            "952c8c2539e948f2bc6597fe881d04c3",
-            "26ee84a30962475f9305c2b2f9f32bc7",
-            "426cf024aafb4117b6aef2a05cd70119",
-            "b9762a6938024998a91607b70ec8a55b",
-            "7dc20e0278ea48c08c4f9d1a86a8debd",
-            "7da945b6da6c4f168a6c6064612690cc",
-            "019a00156e0a499a985d3c98754b9f4f",
-            "529a94b10eca49d6a77af43d337886f3",
-            "a0148e0ba53545248be31a790e735834"
-          ]
+          "height": 53
         },
         "id": "71xsmw7x2SKs",
-        "outputId": "bcb9fd18-079a-4b58-b2dd-4abeeb58dfe9"
+        "outputId": "bdb42cb4-61b7-4286-ff23-741cdb3381ad"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
-          "output_type": "display_data",
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<IPython.core.display.HTML object>"
+              "'import ydata_profiling as ydp\\nimport pandas as pd\\nfrom ydata_profiling import ProfileReport\\nprofile = ProfileReport(df.to_pandas(), title=\"Profiling Report\")\\nprofile.to_notebook_iframe().  '"
             ],
-            "text/html": [
-              "\n",
-              "            <div>\n",
-              "                <ins><a href=\"https://ydata.ai/register\">Upgrade to ydata-sdk</a></ins>\n",
-              "                <p>\n",
-              "                    Improve your data and profiling with ydata-sdk, featuring data quality scoring, redundancy detection, outlier identification, text validation, and synthetic data generation.\n",
-              "                </p>\n",
-              "            </div>\n",
-              "            "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "ERROR:root:Unexpected exception finding object shape\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/google/colab/_debugpy_repr.py\", line 54, in get_shape\n",
-            "    shape = getattr(obj, 'shape', None)\n",
-            "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/polars/dataframe/frame.py\", line 775, in shape\n",
-            "    return self._df.shape()\n",
-            "           ^^^^^^^^^^^^^^^^\n",
-            "RuntimeError: Already mutably borrowed\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "30b25d8ebf33492a8066ccdfb9fa218f"
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
             }
           },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n",
-            "  0%|          | 0/10 [00:00<?, ?it/s]\u001b[A\n",
-            " 10%|█         | 1/10 [00:23<03:34, 23.80s/it]\u001b[A\n",
-            " 20%|██        | 2/10 [00:38<02:26, 18.37s/it]\u001b[A\n",
-            " 40%|████      | 4/10 [01:30<02:19, 23.33s/it]\u001b[A\n",
-            " 50%|█████     | 5/10 [01:46<01:44, 20.89s/it]\u001b[A\n",
-            " 70%|███████   | 7/10 [01:47<00:34, 11.35s/it]\u001b[A\n",
-            " 80%|████████  | 8/10 [01:57<00:21, 10.58s/it]\u001b[A"
-          ]
+          "metadata": {},
+          "execution_count": 34
         }
       ]
     },
@@ -1125,11 +708,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "#add review length column\n",
-        "df=df.with_columns(\n",
-        "    pl.col(\"review/text\").str.len().alias(\"review_length\"))"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
